src/my-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: my-app.example.com
      http:
        paths:
          - path: /my-app/(.*)
            pathType: Prefix
            backend:
              service:
                name: my-app-service
                port:
                  name: http
